# sf-samples

./: .gitignore  CMakeLists.txt  CMakePresets.json  inventory.sfc  simple.sfc  simple_test.sfc  vcpkg-configuration.json  vcpkg.json
apps/sf-runner/: CMakeLists.txt
apps/sf-runner/src/: main.c
apps/sf-window/: CMakeLists.txt
apps/sf-window/src/: main.c
assets/lib/: Mean.json
assets/lib/math/: Square.json
assets/lib/text/: render_text.json
assets/projects/: cartridge_test.json
assets/projects/inventory/: inventory.json  inventory.mfapp  inventory_logic.json  inventory_render.json  inventory_render_simple.json
assets/projects/sdf_button/: sdf_button.json  sdf_button.mfapp
assets/projects/text_demo/: render.json  text_demo.mfapp
tests/: CMakeLists.txt  test_cartridge.mfapp
tests/integration/test_pipeline/: physics.json  render.json  test_pipeline.mfapp
tests/unit/data/: array_test.json  dataframe_test.json  string_test.json
tests/unit/logic/: counter.json  cycle_test.json  filter_test.json  gather_oob_test.json  logic_test.json  select_test.json  square_test.json
tests/unit/logic/counter/: counter.json  counter.mfapp
tests/unit/math/: decomp_test.json  fail_safe_fail.json  fail_shape_mismatch.json  fma_test.json  glsl_math_test.json  math_matrix_test.json  math_test.json  mean_test.json  native_ops_test.json  reduction_test.json  safe_fail.json  sdf_math_test.json  simple_math.json  simple_math_fixed.json  type_mismatch_test.json
tests/unit/math/suite/: math_suite.json  math_suite.mfapp
tests/unit/structure/: main_recursive.json  multi_domain_test.json  sub_inner.json  sub_outer.json  subgraph_child.json  subgraph_child_multi.json  subgraph_main.json  subgraph_multi_test.json
tests/unit/structure/nested/: caller.json
tests/validation/: barrier_test.json  broadcast_test.json  dummy_2d.json  dummy_out.json  dummy_transpose.json  fail_index_dtype.json  fail_readonly.mfapp  fail_shape.mfapp  sub_with_index.json  test_index_i32.json  test_index_i32.mfapp  test_mean_stable.sfc  test_system.mfapp
tests/validation/negative/: fail_index_dtype.json  fail_index_invalid_dtype.json  fail_index_subgraph.json  fail_readonly.mfapp  fail_shape.mfapp
tests/validation/positive/index_i32/: test_index_i32.json  test_index_i32.mfapp
tests/validation/positive/math_edge_cases/: barrier_test.json  broadcast_test.json  sub_with_index.json  test_mean_stable.json  use_time.json
tests/validation/positive/system/: test_system.mfapp
vcpkg-ports/sf-samples/: portfile.cmake  vcpkg.json
